# cncd

./: .env.development  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
app/: tsconfig.json
app/src/: main.ts  mainWindow.ts  preload.ts  security.ts
server/.cargo/: config.toml
server/src/: main.rs
src/: main.rs
src/websocket/: actor.rs  mod.rs
static/: .editorconfig  .gitattributes  vite.config.ts
static/src/: index.html
ui/: vite.config.ts
ui/src/: App.tsx  index.tsx  tsconfig.json
ui/src/components/: icon-button.component.tsx  job-card.component.tsx  navbar.component.tsx  window-controls.component.tsx
ui/src/css/: styles.css
ui/src/grbl/: BaseGrblHandler.ts  GCodeFileWriter.ts  GrblController.ts  GrblHandlersGroup.ts  JobStateHandler.ts  MachineStateHandler.ts
ui/src/store/: index.ts  types.ts  windowStateSlice.ts
