[package]
name = "cncd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
regex = "1.6.0"
actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
log = "0.4"
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"
crossbeam-channel = "0.5"
async-stream = "0.3.3"
tokio-serial = "5.4.3"
tokio-util = "0.7.4"
bytes = "1.2.1"
futures = "0.3.25"